# GarudaEye

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/analyzers/: Cargo.toml
crates/analyzers/src/: lib.rs  shodan.rs
crates/analyzers/src/fingerprint/: asn.rs  banner.rs  cloud.rs  dns.rs  http.rs  mod.rs  signatures.rs  tls.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  state.rs
crates/api/src/handlers/: assets.rs  attack_paths.rs  dashboard.rs  mod.rs  relationships.rs
crates/collectors/: Cargo.toml
crates/collectors/src/: lib.rs
crates/collectors/src/aws/: apigateway.rs  cloudfront.rs  dynamodb.rs  ec2.rs  ecs.rs  eks.rs  elasticache.rs  elasticbeanstalk.rs  elasticsearch.rs  elb.rs  lambda.rs  mod.rs  rds.rs  route53.rs  s3.rs  sns.rs  sqs.rs  vpc.rs
crates/garudaeye/: Cargo.toml  build.rs
crates/garudaeye/src/: main.rs  orchestrator.rs  relationship_builder.rs  server.rs  worker.rs
crates/garudaeye_core/: Cargo.toml
crates/garudaeye_core/src/: asset.rs  config.rs  count.rs  error.rs  lib.rs  orchestrator.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  traits.rs
crates/infra/src/cloud/: mod.rs  postgres.rs  redis_bus.rs
crates/infra/src/local/: filesystem.rs  memory_bus.rs  mod.rs  sqlite.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: Navbar.vue
frontend/src/router/: index.js
frontend/src/views/: AssetDetail.vue  Assets.vue  AssetsMap.vue  AttackSurface.vue  Dashboard.vue
migrations/: 20240324000001_initial_schema.sql  20240325000001_add_relationships_and_metadata.sql  20240326000001_add_performance_indexes.sql  20240327000001_add_fingerprint_columns.sql
scripts/: build.sh  dev.sh  release.sh  run.sh
