[package]
name = "infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
garudaeye_core = { path = "../garudaeye_core" }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
